# blog_claudecode

./: .CLAUDE.md.swp  .gitignore  CLAUDE.md  README_n8n_workflow_with_agents.md  YouTube-to-Blog Content Pipeline.json  flow.md  idea.md  n8nflow.md  prompt.md  prompt_full.md  youtube_to_blog_pipeline_refined_v2.json  youtube_to_blog_pipeline_with_agents.json
financial-blog-pipeline/: agents_demo.py  validate_phase2_3.py
financial-blog-pipeline/extraction/: .env.example  .gitignore  README.md  __init__.py  database_setup.py  extract_specific_video.py  get_latest_by_channel.py  get_latest_uploads.py  main.py  pyproject.toml  requirements.txt  simple_extractor.py  test_env.py  upload_to_postgresql.py
financial-blog-pipeline/generation/: .env.example  README.md  debug_ticker.py  prompt.yaml  pyproject.toml  requirements.txt  test_agent_ticker.py  test_fetch_latest_transcript.py
financial-blog-pipeline/generation/scripts/: run_pipeline.py
financial-blog-pipeline/generation/sql/: schema.sql
financial-blog-pipeline/generation/src/generation_pipeline/: assembly.py  cli.py  config.py  db.py  finalize.py  images.py  langchain_agent.py  llm_langchain.py  models.py  persistence.py  prompts.py  visual_topics.py
financial-blog-pipeline/ghost_formatting/: README.md  ghost_formatter.py  ghost_uploader.py  main.py  requirements.txt
financial-blog-pipeline/phase2_generation/: AGENT_ARCHITECTURE.md  QUICK_START.md  README.md  UNSPLASH_INTEGRATION.md  demo.py  main.py  requirements.txt
financial-blog-pipeline/phase2_generation/prompts/: cantonese.prompt  traditional_chinese.prompt
financial-blog-pipeline/phase2_generation/src/: blog_generator.py  demo_agents.py  image_agents.py  query_engine.py  test_image_search.py
financial-blog-pipeline/shared/config/: phase2_config.py  style_guide.md
financial-blog-pipeline/shared/database/: connection.py  models.py  schema.sql
financial-blog-pipeline/shared/handoffs/: phase_status.json
financial-blog-pipeline/shared/utils/: file_helpers.py  logging.py  validation.py
financial-blog-pipeline/tests/: test_fetch_latest_transcript.py
