[tool.poetry]
name = "financial-blog-extraction"
version = "0.1.0"
description = "YouTube transcript extraction and PostgreSQL storage for financial blog pipeline"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "extraction"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.14"
youtube-transcript-api = "^1.2.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.108.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
extract = "main:main"
extract-channel = "get_latest_by_channel:main"
extract-specific = "extract_specific_video:main"
setup-db = "database_setup:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=extraction --cov-report=term-missing --cov-report=html"